--- a/api-gateway/ApiGateway/ApiGateway.csproj
+++ b/api-gateway/ApiGateway/ApiGateway.csproj
@@ -16,6 +16,10 @@
 
   <ItemGroup>
     <PackageReference Include="Ocelot" Version="24.0.1" />
+    <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="9.0.2" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
